<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">"Welcome, dear participants and guests! Today we have a special evening full of fascinating questions and entertaining tasks. We are glad to see you on our quiz, where each of you will be able to show your knowledge and erudition. May this evening bring you not only new knowledge, but also a lot of positive emotions. Get ready, there are challenges ahead, but remember — the main thing is not victory, but participation. We wish good luck to each participant and may the strongest win!"</string>
    <string name="start_quiz">Go to the quiz</string>
    <string name="write_your_name_and_indicate_your_birthday">Write your name and indicate your birthday</string>
    <string name="name">Name</string>
    <string name="select_a_date">Select a Date</string>
    <string name="save">SAVE</string>
    <string name="result">Result</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="start_again">Start again</string>
    <string name="change_language">Change language</string>

</resources>